Updated The Add Entry page to redirect to the Entry List page

--- a/FrogFitness/src/Treehouse.FitnessFrog/Views/Entries/Index.cshtml
+++ b/FrogFitness/src/Treehouse.FitnessFrog/Views/Entries/Index.cshtml
@@ -7,10 +7,7 @@
 <div class="stats">
     <h2 class="stats-header h3">Minutes of Activity</h2>
     <div class="stats-left">
-        <span class="stats-number">@ViewBag.AverageDailyActivity.ToString("n1")</span> daily average
-    </div>
-    <div class="stats-right">
-        <span class="stats-number">@ViewBag.TotalActivity.ToString("n1")</span> total
+        <span class="  number">@ViewBag.TotalActivity.ToString("n1")</span> total
     </div>
 </div>
 
