--- a/FrogFitness/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/FrogFitness/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -4,15 +4,17 @@
 @{
     ViewBag.Title = "Add Entry";
 
-};
-
-
 }
 
 <h2>@ViewBag.Title</h2>
 
+
 @using (Html.BeginForm())
 {
+
+    @Html.ValidationSummary("The following errors were found:", new { @class = "alert alert-danger" })
+
+
     <div class="row">
 
         <div class="col-md-6">
